# Pantheon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev.ps1  dev.sh  docker-compose.yml  kairos_channels.m3u  kairos_sample.xmltv
hades/: CMakeLists.txt  Dockerfile  index.html  kairos_sample.xmltv  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
hephaestus/: CMakeLists.txt  Dockerfile
hephaestus/src/: Config.h  main.cpp
hephaestus/src/api/: ActivityRouter.cpp  ActivityRouter.h  Router.cpp  Router.h
hephaestus/src/kairos/: KairosClient.cpp  KairosClient.h  KairosTypes.h
hephaestus/src/stream/: ChannelSession.cpp  ChannelSession.h  EncoderArgs.cpp  EncoderArgs.h  FfmpegProcess.cpp  FfmpegProcess.h  HwProbe.cpp  HwProbe.h  MediaProbe.cpp  MediaProbe.h  PreviewSession.cpp  PreviewSession.h  PreviewSessionManager.cpp  PreviewSessionManager.h  SessionManager.cpp  SessionManager.h  VodSession.cpp  VodSession.h  VodSessionManager.cpp  VodSessionManager.h
hermes/: CMakeLists.txt  Dockerfile
hermes/src/: Config.h  main.cpp
hermes/src/api/: Router.cpp  Router.h
hermes/src/broadcast/: BroadcasterManager.cpp  BroadcasterManager.h  ChannelBroadcaster.cpp  ChannelBroadcaster.h
hermes/src/kairos/: KairosClient.cpp  KairosClient.h  KairosTypes.h
hermes/src/log/: LogBuffer.h
image-cache/: 00ecd72385dfdbaf  031d3fa93bf90f26  03b8da5d948b77d7  04007e4ae4f63dd8  0447deb18db50cb8  05cb4a71752bf6c5  0a0154818f6d1bf9  0d33c16ce9210c66  1175332e73c59149  1227ec0974dfe4f5  126587007ced2e31  15294dc3c69d7ffc  157634e42bde772a  183d2753fb846966  18f1f8a7ea440cc8  1c700b42581e2742  1eb5b2de71ee1399  221d951be0ddd0da  23cfb79dff7b07f7  2d33d565b5b5e656  2d64f60a75b6f35a  2f8d1e85f7fd84a5  308a6abff92297b3  352b8304849ce43c  37c3fdddecb6b595  37dc2696ae69c6c9  37e8a0b332ae4155  3ad59d77a79524a8  3afccc654f824539  3bfdbd91a7201c11  40271e218138abf8  4326324aa519310b  441d54816a18c0c5  46cdde6c800a58b7  4bf3027e933a7546  (+74 more)
kairos/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  hermes_project_brief.md
kairos/src/: main.cpp
kairos/src/api/: AuthContext.cpp  AuthContext.h  IKairosService.h  RouteHelpers.h  Router.cpp  Router.h  ScheduleCache.cpp  ScheduleCache.h  ServiceContext.h
kairos/src/api/services/: ActivityService.cpp  ActivityService.h  ArrService.cpp  ArrService.h  AuthService.cpp  AuthService.h  BlockService.cpp  BlockService.h  ChannelService.cpp  ChannelService.h  ChapterService.cpp  ChapterService.h  ConfigService.cpp  ConfigService.h  ContentService.cpp  ContentService.h  DownloadService.cpp  DownloadService.h  FillerService.cpp  FillerService.h  KairosService.cpp  KairosService.h  PlaybackService.cpp  PlaybackService.h  PlaylistService.cpp  PlaylistService.h  PlexSyncHelper.cpp  PlexSyncHelper.h  RequestService.cpp  RequestService.h  SchedulerService.cpp  SchedulerService.h  ScraperService.cpp  ScraperService.h  SourceService.cpp  SourceService.h  TimeslotService.cpp  TimeslotService.h
kairos/src/arr/: ArrServiceFactory.cpp  ArrServiceFactory.h  IArrService.h  RadarrService.cpp  RadarrService.h  SonarrService.cpp  SonarrService.h
kairos/src/auth/: AuthStore.cpp  AuthStore.h
kairos/src/conf/: ConfStore.cpp  ConfStore.h
kairos/src/db/: BlockRepository.cpp  BlockRepository.h  BlockSerializer.cpp  BlockSerializer.h  ChannelRepository.cpp  ChannelRepository.h  ChannelSerializer.cpp  ChannelSerializer.h  ChapterRepository.cpp  ChapterRepository.h  ConfigRepository.cpp  ConfigRepository.h  ContentRepository.cpp  ContentRepository.h  CursorRepository.cpp  CursorRepository.h  Database.cpp  Database.h  DbHelpers.h  FillerRepository.cpp  FillerRepository.h  GroupRepository.cpp  GroupRepository.h  ListTypes.h  PlaylistRepository.cpp  PlaylistRepository.h  ScheduleRepository.cpp  ScheduleRepository.h  SourceRepository.cpp  SourceRepository.h  TimeslotRepository.cpp  TimeslotRepository.h
kairos/src/download/: DownloadManager.cpp  DownloadManager.h
kairos/src/log/: DebugLog.h  LogBuffer.h
kairos/src/model/: Block.h  Channel.h  Chapter.h  Episode.h  Movie.h  Playlist.h  ProgramEntry.h  Show.h  SourceConfig.h
kairos/src/scheduler/: CursorState.cpp  CursorState.h  EPGMaterializer.cpp  EPGMaterializer.h  Rng.h  RuleEngine.cpp  RuleEngine.h  RuntimeFlags.cpp  RuntimeFlags.h
kairos/src/scraper/: AnidbScraper.cpp  AnidbScraper.h  IMetadataScraper.h  ScraperManager.cpp  ScraperManager.h  TmdbScraper.cpp  TmdbScraper.h  TvdbScraper.cpp  TvdbScraper.h
kairos/src/source/: EmbySource.h  IMediaSource.h  JellyfinBaseSource.cpp  JellyfinBaseSource.h  JellyfinSource.h  LocalSource.cpp  LocalSource.h  MediaProbe.cpp  MediaProbe.h  PlexSource.cpp  PlexSource.h  SyncManager.cpp  SyncManager.h
kairos/src/sync/: EmbySource.h  JellyfinSource.h  LocalSource.h  MediaProbe.h  MediaSource.h  PlexSource.cpp  PlexSource.h  SyncManager.cpp  SyncManager.h
kairos/ui-dist/: index.html
kairos/ui-dist/assets/: index-0NaciHcn.css  index-0X_zTouN.js  index-4ETRoILa.css  index-B-AlDnDK.js  index-BBrdPAz4.js  index-BLdQDd4g.js  index-BMJgvq94.css  index-BOZD-lqy.js  index-Bb5qwtnE.css  index-Bfp9eDig.js  index-BrW54yxZ.js  index-BtCKWm8m.css  index-BuvcWtL3.js  index-BwmoWVz3.js  index-C-IeyOgf.js  index-C1CA--HH.js  index-CH-60FmZ.js  index-CHWsowRg.js  index-CMLdeMGv.css  index-CND4QpJT.js  index-CPDgMwd7.js  index-CgeQtTQT.css  index-Cq1hr7ws.js  index-D29XHRvD.js  index-D9Qog5V7.js  index-DBspKw6w.js  index-DCWV3C_x.js  index-DCbfn1gc.css  index-DEuP5eOb.js  index-DOdjw3qr.js  index-DPwYZwBP.js  index-DaMfBBrU.js  index-Di3Oq--0.css  index-DlnD9IE5.js  index-Dp4KXOzz.css  index-Ds6SdniP.css  index-F0R85l2y.js  index-FBE6aDCW.css  index-ORLXcSEp.js  index-TegGkrBx.js  (+13 more)
momus/kairos/: CMakeLists.txt
momus/kairos/db/: test_block_repository.cpp  test_chapter_repository.cpp  test_migrations.cpp  test_schema_constraints.cpp
momus/kairos/scheduler/: test_cursor_state.cpp  test_epg_output.cpp  test_rule_engine.cpp
momus/kairos/source/: test_jellyfin_source.cpp  test_local_source.cpp  test_plex_source.cpp
(+106 files in other folders)
